--- a/grid(year).ipynb
+++ b/grid(year).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "(480, 28)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -176,12 +176,14 @@
     "blue_patch=mpatches.Patch(color='blue',label=\"Z/H constant \\dex\")\n",
     "dot=mlines.Line2D([],[],color='blue', marker='o',markersize=10,label='VCC1407')\n",
     "plt.legend(handles=[green_patch,blue_patch,dot])\n",
+    "\n",
+    "plt.savefig('8Gyr')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -209,8 +211,6 @@
     "plt.xlabel('<Fe>',fontsize=18)\n",
     "plt.ylabel('Mgb',fontsize=18)\n",
     "plt.title('12Gyr',fontsize=20)\n",
-    "#plt.savefig('12Gyr.png')\n",
-    "#plt.show()\n",
     "\n",
     "#ploting lines of constant metalicity and alpha/iron\n",
     "\n",
@@ -248,6 +248,9 @@
     "blue_patch=mpatches.Patch(color='blue',label=\"Z/H constant \\dex\")\n",
     "dot=mlines.Line2D([],[],color='blue', marker='o',markersize=10,label='VCC1407')\n",
     "plt.legend(handles=[green_patch,blue_patch,dot])\n",
+    "\n",
+    "\n",
+    "plt.savefig('12Gyr.png')\n",
     "plt.show()\n"
    ]
   },
